force-app/main/default/objects/User/fields/CCR_UserType__c.field-meta.xml
<CustomField>
    <fullName>CCR_UserType__c</fullName>
    <description>Used by: CCR Description: Used to monitor which SFDC licence has been assigned to the user. Introduced by QURE</description>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_UserType</valueSetName>
    </valueSet>
</CustomField>