force-app/main/default/objects/User/fields/KDCE_KnowledgeApprover__c.field-meta.xml
<CustomField>
    <fullName>KDCE_KnowledgeApprover__c</fullName>
    <description>[KDCE] Knowledge Article 승인자</description>
    <label>Knowledge Approver</label>
    <relationshipName>Knowledge_Approver</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>